manifests-failed/telegraf-operator-1.4.0.tgz-manifest.yaml
---
# Source: telegraf-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-telegraf-operator
  namespace: telegraf-operator-1.4.0.tgz
  labels:
    helm.sh/chart: telegraf-operator-1.4.0
    app.kubernetes.io/name: telegraf-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.11"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: telegraf-operator
    app.kubernetes.io/instance: my-release
---
# Source: telegraf-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-telegraf-operator
  namespace: telegraf-operator-1.4.0.tgz
  labels:
    helm.sh/chart: telegraf-operator-1.4.0
    app.kubernetes.io/name: telegraf-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.11"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: telegraf-operator
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: telegraf-operator
        app.kubernetes.io/instance: my-release
      annotations:
        checksum/config: 947da3feddab129e182cb0da714ac6b51866a080447894b7e89ffe0f0d5aa0f0
    spec:
      containers:
        - name: telegraf-operator
          securityContext:
            {}
          image: "quay.io/influxdb/telegraf-operator:v1.3.11"
          imagePullPolicy: IfNotPresent
          args:
            - "--telegraf-default-class=infra"
            - --telegraf-classes-directory=/etc/telegraf-operator
            - --enable-default-internal-plugin
            - "--telegraf-image=docker.io/library/telegraf:1.22"
            - "--telegraf-requests-cpu=10m"
            - "--telegraf-requests-memory=10Mi"
            - "--telegraf-limits-cpu=200m"
            - "--telegraf-limits-memory=200Mi"
          ports:
            - name: https
              containerPort: 9443
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/certs
              name: certs
              readOnly: true
            - mountPath: /etc/telegraf-operator
              name: classes
              readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
      serviceAccountName: my-release-telegraf-operator
      securityContext:
        {}
      volumes:
      - name: certs
        secret:
          secretName: telegraf-operator-tls
      - name: classes
        secret:
          secretName: telegraf-operator-classes
---
# Source: telegraf-operator/templates/tls.yml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: "/my-release-telegraf-operator"
  labels:
    helm.sh/chart: telegraf-operator-1.4.0
    app.kubernetes.io/name: telegraf-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.11"
    app.kubernetes.io/managed-by: Helm
  name: my-release-telegraf-operator
webhooks:
- clientConfig:
    service:
      name: my-release-telegraf-operator
      namespace: telegraf-operator-1.4.0.tgz
      path: /mutate-v1-pod
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLakNDQWhLZ0F3SUJBZ0lSQUxZMHF5U2NhYWMyWVFYWmx4S2FDSWt3RFFZSktvWklodmNOQVFFTEJRQXcKSHpFZE1Cc0dBMVVFQXhNVWRHVnNaV2R5WVdZdGIzQmxjbUYwYjNJdFkyRXdIaGNOTWpRd05qSXdNVFExT0RVMQpXaGNOTWpVd05qSXdNVFExT0RVMVdqQWZNUjB3R3dZRFZRUURFeFIwWld4bFozSmhaaTF2Y0dWeVlYUnZjaTFqCllUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUpqWTJjNGJVKy94aUg1MmNhNUMKL2Nlak9ocmRXbHR2cG1FRUZHQWhGWEd6aE5CM05ya0M5TzhLaFBkZkhIMVNaVXJKSTFkakVpYzlwVXNIamNxcQpOVmRiTWorVlFLNF [...]
  failurePolicy: Ignore
  sideEffects: None
  admissionReviewVersions:
  - 'v1'
  name: telegraf.influxdata.com
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - CREATE
    - DELETE
    resources:
    - pods
